--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,8 @@
 name: tests
 on: [push, pull_request, workflow_dispatch]
 jobs:
-  build_opensc:
-    name: Build opensc package
+  build_tools:
+    name: Build custom yubico-piv-tool package
     #if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-22.04
     steps:
@@ -12,36 +12,20 @@ jobs:
         cache-name: tools-deb
       with:
         path: |
-          opensc*.deb
           yubico-piv-tool*.deb
         key: ${{ runner.os }}-${{ env.cache-name }}
-    - name: Check file existence
-      id: check_opensc
-      uses: andstor/file-existence-action@v1
-      with:
-        files: "opensc*.deb"
     - name: Check file existence
       id: check_yubico_piv
       uses: andstor/file-existence-action@v1
       with:
         files: "yubico-piv-tool*.deb"
     - name: Package Install
-      if: steps.check_opensc.outputs.files_exists == 'false' || steps.check_yubico_piv.outputs.files_exists == 'false'
+      if: steps.check_yubico_piv.outputs.files_exists == 'false'
       run: |
         sudo sed -i 's/^# deb-src/deb-src/' /etc/apt/sources.list  
         sudo apt-get update
         sudo apt-get install -q -y libeac-dev curl git gcc g++ cmake swig psmisc procps debian-keyring devscripts libpcsclite-dev check gengetopt help2man openssl zlib1g-dev
-        sudo apt-get build-dep -q -y opensc
         sudo rm -f /usr/bin/clang-tidy
-    - name: Build opensc package
-      if: steps.check_opensc.outputs.files_exists == 'false'
-      run: |
-        dget -u http://archive.ubuntu.com/ubuntu/pool/universe/o/opensc/opensc_0.25.0~rc1-1build2.dsc
-        ls -l
-        cd 'opensc-0.25.0~rc1'
-        #curl https://github.com/OpenSC/OpenSC/commit/a0aef25c7f2ce0ec2c7e1014f959f0fe86ff0479.diff | patch -p1
-        dch --local ppa~jammy --distribution jammy "Apply a patch. Backports to Jammy."
-        DEB_BUILD_OPTIONS='parallel=2' debuild --no-sign -b
     - name: Build yubico-piv-tool package
       if: steps.check_yubico_piv.outputs.files_exists == 'false'
       run: |
@@ -62,27 +46,26 @@ jobs:
       with:
         name: tools-deb
         path: |
-          opensc*.deb
           yubico-piv-tool*.deb
 
 
 
   build_test:
     name: Build and Test
-    runs-on: ubuntu-22.04
-    needs: build_opensc
+    runs-on: ubuntu-latest
+    needs: build_tools
     steps:
-    - name: Download backport OpenSC package
+    - name: Download packages
       uses: actions/download-artifact@v4
       with:
         name: tools-deb
 
     - name: Package Install
       run: |
-        sudo apt-add-repository ppa:yubico/stable
-        sudo apt-get update
-        sudo apt-get install -q -y libeac3 git gcc g++ cmake swig psmisc procps pcscd pcsc-tools libhidapi-dev libassuan-dev libgcrypt20-dev libksba-dev libnpth0-dev libssl3 zlib1g libglib2.0-0 openssl openssh-server libpcsclite-dev libudev-dev libcmocka-dev python3-pip python3-setuptools python3-wheel lcov yubikey-manager libcbor-dev
-        sudo dpkg -i opensc*.deb yubico-piv-tool*.deb
+        # sudo apt-add-repository ppa:yubico/stable
+        # sudo apt-get update
+        sudo apt-get install -q -y gpg scdaemon opensc libeac3 git gcc g++ cmake swig psmisc procps pcscd pcsc-tools libhidapi-dev libnpth0-dev libssl3 zlib1g libglib2.0-0 openssl openssh-server libpcsclite-dev libudev-dev libcmocka-dev python3-pip python3-setuptools python3-wheel lcov yubikey-manager libcbor-dev
+        sudo dpkg -i yubico-piv-tool*.deb
         pip3 install --upgrade pip
 
     - name: Set up Go 1.16
@@ -153,6 +136,7 @@ jobs:
         UsePAM no
         Port 2200
         EOF
+        sudo mkdir -p /run/sshd
         sudo /usr/sbin/sshd -f /tmp/sshd_config
 
     - name: Smoking Tests
@@ -169,7 +153,7 @@ jobs:
         sudo killall -9 pcscd || true
         sudo cp build/libu2f-virt-card.so /usr/local/lib/
         sudo cp test-via-pcsc/pcscd-reader.conf /etc/reader.conf.d/
-        bash -c 'sudo LD_PRELOAD="$(gcc -print-file-name=libasan.so) $(gcc -print-file-name=libubsan.so)" pcscd -a -f >/tmp/pcscd.log &'
+        bash -c 'sudo LD_PRELOAD="$(gcc -print-file-name=libasan.so) $(gcc -print-file-name=libubsan.so)" pcscd --disable-polkit -a -f >/tmp/pcscd.log &'
         sleep 15 # wait for admin applet reset
         timeout 1s pcsc_scan || true
         go env -w GO111MODULE=on
@@ -220,12 +204,13 @@ jobs:
         echo 123456 >"/tmp/mock/PIN"
         echo -e 'Key-Type: 1\nKey-Length: 2048\nSubkey-Type: 1\nSubkey-Length: 2048\nName-Real: Someone\nName-Email: foo@example.com\nPassphrase: 12345678\n%commit\n%echo done' | gpg --batch --gen-key
         KEYID=$(gpg -K --with-colons |grep -P '^sec'|grep -oP '\w{16}')
-        Addkey() { echo -e "addkey\n$1\n$2\n0\nsave" | gpg --yes --expert --command-fd 0 --edit-key $KEYID; }
-        Key2card() { echo -e "key $1\nkeytocard\n$2\nsave" | gpg --yes --command-fd 0 --edit-key $KEYID; gpg --card-status; }
-        Addcardkey() { echo -e "addcardkey\n$1\n0\nsave\n" | gpg --expert --command-fd 0 --yes --edit-key $KEYID; }
+        gpg_alias () { gpg --yes --expert --command-fd 0 --status-fd 1 "$@"; }
+        Addkey() { echo -e "addkey\n$1\n$2\n0\nsave" | gpg_alias --edit-key $KEYID; }
+        Key2card() { echo -e "key $1\nkeytocard\n$2\nsave" | gpg_alias --edit-key $KEYID; gpg --card-status; }
+        Addcardkey() { echo -e "addcardkey\n$1\n0\nsave\n" | gpg_alias --edit-key $KEYID; }
         ChangeUsage() {
           SUBKEY=$(gpg -K --with-colons|awk -F: '$1~/ssb/ && $12~/a/ {print $5}'|tail -n 1)
-          echo -e "key $SUBKEY\nchange-usage\nS\nQ\ncross-certify\nsave" | gpg --yes --expert --command-fd 0 --edit-key $KEYID
+          echo -e "key $SUBKEY\nchange-usage\nS\nQ\ncross-certify\nsave" | gpg_alias --edit-key $KEYID
         }
         GPGSign() { date -Iseconds | gpg --armor --default-key $(gpg -K --with-colons|awk -F: '$1~/ssb/ && $12~/s|a/ {print $5}'|tail -n 1)! -s|gpg; }
         GPGEnc()  { date -Iseconds | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1~/ssb/ && $12~/e/ {print $5}'|tail -n 1) --encrypt|gpg; }
@@ -234,12 +219,12 @@ jobs:
           ssh-add -L >~/.ssh/authorized_keys
           ssh -v -p 2200 -o StrictHostKeyChecking=no -o PasswordAuthentication=no localhost id
         }
-        SetUIF() { echo -e "admin\nuif $1 $2\nq" | gpg --yes --command-fd 0 --edit-card; }
+        SetUIF() { echo -e "admin\nuif $1 $2\nq" | gpg_alias --edit-card; }
         UserChecked() { cnt=$((`cat /tmp/canokey-test-up`)); echo 0 >/tmp/canokey-test-up; [ $1 == $cnt ]; }
-        GPGReset() { echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card; } # clear all keys, no pin verification at all
+        GPGReset() { echo -e 'admin\nfactory-reset\ny\nyes' | gpg_alias --edit-card; } # clear all keys, no pin verification at all
         echo 0 >/tmp/canokey-test-up && echo 0 >/tmp/canokey-test-nfc # Emulate the USB mode
         gpg --card-status |grep -E 'UIF setting.+Sign=off Decrypt=off Auth=off'
-        echo -e 'admin\npasswd\n1\n3\n4\nq\nforcesig\nq' | gpg --yes --command-fd 0 --edit-card # change PIN,Admin PIN,Reset Code
+        echo -e 'admin\npasswd\n1\n3\n4\nq\nforcesig\nq' | gpg_alias --edit-card # change PIN,Admin PIN,Reset Code
         Key2card 1 1 # key[1] to Signature key
         echo 0 >/tmp/canokey-test-up
         GPGSign
@@ -322,9 +307,9 @@ jobs:
         Key2card 12 1 # key[12] to Signature key
         GPGSign
         GPGReset
-        echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card
+        echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg_alias --edit-card
         ## RSA2048 generation on card
-        echo -e 'admin\nkey-attr\n1\n2048\n1\n2048\n1\n2048\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to RSA2048
+        echo -e 'admin\nkey-attr\n1\n2048\n1\n2048\n1\n2048\n' | gpg_alias --edit-card # key-attr set to RSA2048
         Addcardkey 1 # generate Signature key on card
         Addcardkey 2 # generate Encryption key on card
         GPGEnc
@@ -334,7 +319,7 @@ jobs:
         GPGAuth
         GPGReset
         ## 25519 generation on card
-        echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to 25519
+        echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg_alias --edit-card # key-attr set to 25519
         Addcardkey 1 # generate Signature key on card
         Addcardkey 2 # generate Encryption key on card
         GPGEnc
@@ -344,7 +329,7 @@ jobs:
         GPGAuth
         GPGReset
         ## NIST P-256 generation on card
-        echo -e 'admin\nkey-attr\n2\n3\n2\n3\n2\n3\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to ECC P-256
+        echo -e 'admin\nkey-attr\n2\n3\n2\n3\n2\n3\n' | gpg_alias --edit-card # key-attr set to ECC P-256
         Addcardkey 1 # generate Signature key on card
         Addcardkey 2 # generate Encryption key on card
         GPGEnc
@@ -352,13 +337,13 @@ jobs:
         Addcardkey 3 # generate Authentication key on card
         ChangeUsage
         GPGAuth
-        echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg_alias --edit-card
         gpgconf --kill gpg-agent # restart agent to clear cached info
-        echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg_alias --edit-card
         diff /tmp/random-read.txt /tmp/random.txt
         GPGReset
         ## NIST P-384 generation on card
-        echo -e 'admin\nkey-attr\n2\n4\n2\n4\n2\n4\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to ECC P-384
+        echo -e 'admin\nkey-attr\n2\n4\n2\n4\n2\n4\n' | gpg_alias --edit-card # key-attr set to ECC P-384
         Addcardkey 1 # generate Signature key on card
         Addcardkey 2 # generate Encryption key on card
         GPGEnc
@@ -366,13 +351,13 @@ jobs:
         Addcardkey 3 # generate Authentication key on card
         ChangeUsage
         GPGAuth
-        echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg_alias --edit-card
         gpgconf --kill gpg-agent # restart agent to clear cached info
-        echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg_alias --edit-card
         diff /tmp/random-read.txt /tmp/random.txt
         GPGReset
         ## secp256k1 generation on card
-        echo -e 'admin\nkey-attr\n2\n9\n2\n9\n2\n9\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to ECC secp256k1
+        echo -e 'admin\nkey-attr\n2\n9\n2\n9\n2\n9\n' | gpg_alias --edit-card # key-attr set to ECC secp256k1
         Addcardkey 1 # generate Signature key on card
         Addcardkey 2 # generate Encryption key on card
         GPGEnc
@@ -380,16 +365,16 @@ jobs:
         Addcardkey 3 # generate Authentication key on card
         ChangeUsage
         # GPGAuth # ssh does not support secp256k1
-        echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg_alias --edit-card
         gpgconf --kill gpg-agent # restart agent to clear cached info
-        echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg_alias --edit-card
         diff /tmp/random-read.txt /tmp/random.txt
         GPGReset
         # Fill this applet as much as possible
-        echo -e 'admin\nname\nTheFirstNameQQQQQQ\nTheLastNamePPPPPPPP\nlang\nlanguage\nsex\nm\nquit' | gpg --yes --command-fd 0 --edit-card
-        echo -e 'admin\nurl\nexample.com/111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111\nquit' | gpg --yes --command-fd 0 --edit-card
-        echo -e 'admin\nlogin\naaaaaaaaaaaa000000000000000000000001111111111111111122222222222\nquit' | gpg --yes --command-fd 0 --edit-card
-        echo -e 'admin\ncafpr 2\n9914 B3B0 BF7E 3B12 DB72  8AC7 3695 10EC DF14 672E\ncafpr 1\nEC17 49B4 C512 6CD3 080C  85CA 0088 068F 1016 5897\ncafpr 3\nAC4D DD51 6C35 D8E2 7153  BB3B 4BD8 4023 BC79 46F0\nquit' | gpg --yes --command-fd 0 --edit-card
+        echo -e 'admin\nname\nTheFirstNameQQQQQQ\nTheLastNamePPPPPPPP\nlang\nlanguage\nsex\nm\nquit' | gpg_alias --edit-card
+        echo -e 'admin\nurl\nexample.com/111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111\nquit' | gpg_alias --edit-card
+        echo -e 'admin\nlogin\naaaaaaaaaaaa000000000000000000000001111111111111111122222222222\nquit' | gpg_alias --edit-card
+        echo -e 'admin\ncafpr 2\n9914 B3B0 BF7E 3B12 DB72  8AC7 3695 10EC DF14 672E\ncafpr 1\nEC17 49B4 C512 6CD3 080C  85CA 0088 068F 1016 5897\ncafpr 3\nAC4D DD51 6C35 D8E2 7153  BB3B 4BD8 4023 BC79 46F0\nquit' | gpg_alias --edit-card
         # Private DO 1/2 is not implemented
         gpgconf --kill gpg-agent
         go test -v test-via-pcsc/openpgp_test.go -run TestOpenPGPCerts
